fixing bug where cards were not centered

--- a/angular8/src/styles.css
+++ b/angular8/src/styles.css
@@ -62,6 +62,7 @@ body {
       height: 14px;
   }
   
+  #movies { text-align: center; }
   
   #movies .movie {
     width: 360px;
